Upgrade docker file and some config.

--- a/conf/druid/_common/common.runtime.properties
+++ b/conf/druid/_common/common.runtime.properties
@@ -24,7 +24,7 @@
 # This is not the full list of Druid extensions, but common ones that people often use. You may need to change this list
 # based on your particular setup.
 druid.extensions.directory=/opt/druid/extensions
-druid.extensions.loadList=["druid-kafka-eight", "druid-s3-extensions", "druid-histogram", "druid-datasketches", "druid-lookups-cached-global", "mysql-metadata-storage", "druid-kafka-indexing-service", "druid-avro-extensions"]
+druid.extensions.loadList=["druid-kafka-eight", "druid-s3-extensions", "druid-histogram", "druid-datasketches", "druid-lookups-cached-global", "postgresql-metadata-storage", "druid-kafka-indexing-service", "druid-avro-extensions"]
 
 # If you have a different version of Hadoop, place your Hadoop client jar files in your hadoop-dependencies directory
 # and uncomment the line below to point to your directory.
@@ -41,7 +41,7 @@ druid.startup.logging.logProperties=true
 # Zookeeper
 #
 
-druid.zk.service.host=zk.host.ip
+druid.zk.service.host=172.31.56.114:2181,172.31.58.37:2181,172.31.48.12:2181
 druid.zk.paths.base=/druid
 
 #
@@ -55,52 +55,52 @@ druid.zk.paths.base=/druid
 #druid.metadata.storage.connector.port=1527
 
 # For MySQL:
-druid.metadata.storage.type=mysql
-druid.metadata.storage.connector.connectURI=jdbc:mysql://db.example.com:3306/druid
-druid.metadata.storage.connector.user=...
-druid.metadata.storage.connector.password=...
-
-# For PostgreSQL (make sure to additionally include the Postgres extension):
-#druid.metadata.storage.type=postgresql
-#druid.metadata.storage.connector.connectURI=jdbc:postgresql://db.example.com:5432/druid
+#druid.metadata.storage.type=mysql
+#druid.metadata.storage.connector.connectURI=jdbc:mysql://db.example.com:3306/druid
 #druid.metadata.storage.connector.user=...
 #druid.metadata.storage.connector.password=...
+
+# For PostgreSQL (make sure to additionally include the Postgres extension):
+druid.metadata.storage.type=postgresql
+druid.metadata.storage.connector.connectURI=jdbc:postgresql://recommendation.cjyejqv2btnw.rds.cn-north-1.amazonaws.com.cn:5432/druid
+druid.metadata.storage.connector.user=jikeapp
+druid.metadata.storage.connector.password=jikeapppassword
 
 #
 # Deep storage
 #
 
 # For local disk (only viable in a cluster if this is a network mount):
-druid.storage.type=local
-druid.storage.storageDirectory=var/druid/segments
+#druid.storage.type=local
+#druid.storage.storageDirectory=var/druid/segments
 
 # For HDFS (make sure to include the HDFS extension and that your Hadoop config files in the cp):
 #druid.storage.type=hdfs
 #druid.storage.storageDirectory=/druid/segments
 
 # For S3:
-# druid.storage.type=s3
-# druid.storage.bucket=your-bucket
-# druid.storage.baseKey=druid/segments
-# druid.s3.accessKey=...
-# druid.s3.secretKey=...
+druid.storage.type=s3
+druid.storage.bucket=jike-data-warehouse
+druid.storage.baseKey=druid/segments
+druid.s3.accessKey=AKIAOVJWEGGUKJSVBOPA
+druid.s3.secretKey=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
 
 #
 # Indexing service logs
 #
 
 # For local disk (only viable in a cluster if this is a network mount):
-druid.indexer.logs.type=file
-druid.indexer.logs.directory=var/druid/indexing-logs
+#druid.indexer.logs.type=file
+#druid.indexer.logs.directory=var/druid/indexing-logs
 
 # For HDFS (make sure to include the HDFS extension and that your Hadoop config files in the cp):
 #druid.indexer.logs.type=hdfs
 #druid.indexer.logs.directory=/druid/indexing-logs
 
 # For S3:
-# druid.indexer.logs.type=s3
-# druid.indexer.logs.s3Bucket=your-bucket
-# druid.indexer.logs.s3Prefix=druid/indexing-logs
+druid.indexer.logs.type=s3
+druid.indexer.logs.s3Bucket=jike-data-warehouse
+druid.indexer.logs.s3Prefix=druid/indexing-logs
 
 #
 # Service discovery
@@ -113,7 +113,7 @@ druid.selectors.coordinator.serviceName=druid/coordinator
 # Monitoring
 #
 
-druid.monitoring.monitors=["com.metamx.metrics.JvmMonitor"]
+druid.monitoring.monitors=["org.apache.druid.java.util.metrics.JvmMonitor"]
 druid.emitter=logging
 druid.emitter.logging.logLevel=info
 
