--- a/conf/druid/coordinator/runtime.properties
+++ b/conf/druid/coordinator/runtime.properties
@@ -17,7 +17,7 @@
 # under the License.
 #
 
-druid.host=coordinator
+druid.host=druid-coordinator
 druid.service=druid/coordinator
 druid.plaintextPort=8081
 
