--- a/conf/druid/historical/runtime.properties
+++ b/conf/druid/historical/runtime.properties
@@ -17,7 +17,7 @@
 # under the License.
 #
 
-druid.host=historical
+druid.host=druid-historical
 druid.service=druid/historical
 druid.plaintextPort=8083
 
