--- a/conf/druid/middleManager/runtime.properties
+++ b/conf/druid/middleManager/runtime.properties
@@ -17,7 +17,7 @@
 # under the License.
 #
 
-druid.host=middlemanager
+druid.host=druid-middlemanager
 druid.service=druid/middleManager
 druid.port=8091
 
