--- a/conf/druid/overlord/runtime.properties
+++ b/conf/druid/overlord/runtime.properties
@@ -17,7 +17,7 @@
 # under the License.
 #
 
-druid.host=overlord
+druid.host=druid-overlord
 druid.service=druid/overlord
 druid.plaintextPort=8090
 
