Update start command.
Update the name of main class.

Adjust the memory for broker.

Update buffer size bytes.

Update direct memory.

Update config.

Update port and s3 bucket.

Add middle manager memory.

Update to beijing pg.

Add router.

enable sql.

Add kafka emitter.

set work dir.

Add s3 region.

New s3 path.

Update s3 bucket and emitter.

Update the version of druid.

Update main class.

Update the name of jvm monitor.

Upgrade to 0.14.2

Update the class name.

Update class name.

--- a/conf/druid/_common/common.runtime.properties
+++ b/conf/druid/_common/common.runtime.properties
@@ -24,7 +24,7 @@
 # This is not the full list of Druid extensions, but common ones that people often use. You may need to change this list
 # based on your particular setup.
 druid.extensions.directory=/opt/druid/extensions
-druid.extensions.loadList=["druid-kafka-eight", "druid-s3-extensions", "druid-histogram", "druid-datasketches", "druid-lookups-cached-global", "postgresql-metadata-storage", "druid-kafka-indexing-service", "druid-avro-extensions"]
+druid.extensions.loadList=["druid-kafka-eight", "druid-s3-extensions", "druid-histogram", "druid-datasketches", "druid-lookups-cached-global", "postgresql-metadata-storage", "druid-kafka-indexing-service", "druid-avro-extensions", "kafka-emitter"]
 
 # If you have a different version of Hadoop, place your Hadoop client jar files in your hadoop-dependencies directory
 # and uncomment the line below to point to your directory.
@@ -41,8 +41,8 @@ druid.startup.logging.logProperties=true
 # Zookeeper
 #
 
-druid.zk.service.host=172.31.56.114:2181,172.31.58.37:2181,172.31.48.12:2181
-druid.zk.paths.base=/druid
+druid.zk.service.host=192.168.6.37:2181,192.168.1.252:2181,192.168.6.20:2181
+druid.zk.paths.base=/recommend/druid
 
 #
 # Metadata storage
@@ -80,7 +80,7 @@ druid.metadata.storage.connector.password=jikeapppassword
 
 # For S3:
 druid.storage.type=s3
-druid.storage.bucket=jike-data-warehouse
+druid.storage.bucket=jike-data-warehouse-nx
 druid.storage.baseKey=druid/segments
 druid.s3.accessKey=AKIAOVJWEGGUKJSVBOPA
 druid.s3.secretKey=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
@@ -99,7 +99,7 @@ druid.s3.secretKey=PDqnOiuAQBca0qga2CSL0xzVaNqlWK8enlPk6gjg
 
 # For S3:
 druid.indexer.logs.type=s3
-druid.indexer.logs.s3Bucket=jike-data-warehouse
+druid.indexer.logs.s3Bucket=jike-data-warehouse-nx
 druid.indexer.logs.s3Prefix=druid/indexing-logs
 
 #
@@ -114,10 +114,15 @@ druid.selectors.coordinator.serviceName=druid/coordinator
 #
 
 druid.monitoring.monitors=["org.apache.druid.java.util.metrics.JvmMonitor"]
-druid.emitter=logging
+druid.emitter=kafka
 druid.emitter.logging.logLevel=info
+druid.emitter.kafka.bootstrap.servers=192.168.5.70:9092,192.168.6.96:9092,192.168.11.102:9092
+druid.emitter.kafka.metric.topic=druid-metric
+druid.emitter.kafka.alert.topic=druid-alert
+druid.emitter.kafka.producer.config={"max.block.ms":10000}
 
 # Storage type of double columns
 # ommiting this will lead to index double as float at the storage layer
 
 druid.indexing.doubleStorage=double
+druid.sql.enable=true
