--- a/conf/druid/middleManager/jvm.config
+++ b/conf/druid/middleManager/jvm.config
@@ -1,7 +1,8 @@
 -server
--Xms64m
--Xmx64m
+-Xms2g
+-Xmx2g
 -Duser.timezone=UTC
 -Dfile.encoding=UTF-8
 -Djava.io.tmpdir=var/tmp
 -Djava.util.logging.manager=org.apache.logging.log4j.jul.LogManager
+-Daws.region=cn-north-1
