--- a/conf/druid/router/runtime.properties
+++ b/conf/druid/router/runtime.properties
@@ -17,24 +17,19 @@
 # under the License.
 #
 
-druid.host=druid-middlemanager
-druid.service=druid/middleManager
-druid.port=8083
+druid.host=druid-router
+druid.service=druid/router
+druid.plaintextPort=8083
 
-# Number of tasks per middleManager
-druid.worker.capacity=1
+# HTTP proxy
+druid.router.http.numConnections=50
+druid.router.http.readTimeout=PT5M
+druid.router.http.numMaxThreads=100
+druid.server.http.numThreads=100
 
-# Task launch parameters
-druid.indexer.runner.javaOpts=-server -Xmx2g -XX:MaxDirectMemorySize=4G -Duser.timezone=UTC -Dfile.encoding=UTF-8 -Djava.util.logging.manager=org.apache.logging.log4j.jul.LogManager -Daws.region=cn-north-1
-druid.indexer.task.baseTaskDir=var/druid/task
-druid.indexer.runner.startPort=8100
+# Service discovery
+druid.router.defaultBrokerServiceName=druid/broker
+druid.router.coordinatorServiceName=druid/coordinator
 
-# HTTP server threads
-druid.server.http.numThreads=25
-
-# Processing threads and buffers on Peons
-druid.indexer.fork.property.druid.processing.buffer.sizeBytes=536870912
-druid.indexer.fork.property.druid.processing.numThreads=2
-
-# Hadoop indexing
-druid.indexer.task.hadoopWorkingPath=var/druid/hadoop-tmp
+# Management proxy to coordinator / overlord: required for unified web console.
+druid.router.managementProxy.enabled=true
